# ObliviousTransfer

cpp/BM89/: CMakeLists.txt  GenParam.cc  NonInteractiveOT_chooser.cc  NonInteractiveOT_sender.cc  OTChannels_chooser.cc  OTChannels_sender.cc  ParamBeta0.txt  ParamBeta1.txt  ParamC.txt  ParamG.txt  ParamP.txt
cpp/CO15/: CMakeLists.txt  GenParam.cc  ParamG.txt  ParamP.txt  SimplestOT_chooser.cc  SimplestOT_sender.cc
cpp/CryptoTools/: RWfile.cc  RWfile.h  StringCharArray.cc  StringCharArray.h  ZZCal.cc  ZZCal.h  aes.cc  aes.h  sha256.cc  sha256.h
cpp/NP01/: CMakeLists.txt  EfficientOT_chooser.cc  EfficientOT_sender.cc  GenParam.cc
cpp/NP01/param/: ParamC1.txt  ParamC2.txt  ParamC3.txt  ParamC4.txt  ParamG.txt  ParamG_R.txt  ParamP.txt  ParamR.txt
protos/: EfficientOT.proto  NonInteractiveOT.proto  SimplestOT.proto
